@@ -1,3 +1,8 @@
+2012-12-03 Gustavo Sverzut Barbieri (k-s)
+
+	* Add elm_need_edbus(), deprecate elm_need_e_dbus(), integrating
+	edbus (v2).
+
 2012-04-26 Carsten Haitzler (The Rasterman)
 
         * 1.0.0 release
